<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleBarTitle="设置">

    </com.hyphenate.easeui.widget.EaseTitleBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_change"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/cc_btn_bottom_selector"
                android:padding="10dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dip"
                    android:text="@string/change"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/btn_gray_normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dip"
                    android:text="@string/cc_notify"
                    android:textColor="@color/btn_gray_pressed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/cc_btn_bottom_selector"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/cc_new_notify"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:id="@+id/switch_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_sound"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/cc_btn_bottom_selector"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/cc_voice"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:id="@+id/switch_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:background="#E6E6E6" />

                <RelativeLayout
                    android:id="@+id/rl_switch_vibrate"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"
                    android:background="@drawable/cc_btn_bottom_selector"
                    android:padding="10dip">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dip"
                        android:text="@string/cc_shake"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:typeface="serif" />

                    <com.hyphenate.easeui.widget.EaseSwitchButton
                        android:id="@+id/switch_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dip"
                    android:text="@string/cc_chatset"
                    android:textColor="@color/btn_gray_pressed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_switch_speakers"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/cc_btn_bottom_selector"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/cc_yangshengqi"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:typeface="serif" />

                <com.hyphenate.easeui.widget.EaseSwitchButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/switch_speaker"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dip"
                    android:gravity="bottom|left"
                    android:paddingLeft="10dip"
                    android:text="@string/cc_tool"
                    android:textColor="@color/btn_gray_pressed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/btn_gray_normal" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:background="@drawable/cc_btn_bottom_selector"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/tv_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="10dip"
                    android:text="@string/cc_scan"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:typeface="serif" />


            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_setting_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/holo_red_light"
        android:text="退出"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>